新增依赖注入项目
Signed-off-by: China-Mr-zhong <850856667@qq.com>

--- a/test/Fast.Framework.Web.Test/Fast.Framework.Web.Test.csproj
+++ b/test/Fast.Framework.Web.Test/Fast.Framework.Web.Test.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Fast.Framework.DependencyInjection\Fast.Framework.DependencyInjection.csproj" />
     <ProjectReference Include="..\..\src\Fast.Framework.Logging\Fast.Framework.Logging.csproj" />
     <ProjectReference Include="..\..\src\Fast.Framework\Fast.Framework.csproj" />
     <ProjectReference Include="..\Fast.Framework.Test.Models\Fast.Framework.Test.Models.csproj" />
